--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <title>FURIA Arena Live</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@400;600&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
 
@@ -52,6 +52,6 @@
         <button onclick="send()">ENVIAR</button>
     </div>
 
-    <script src="script.js" defer></script>
+    <script src="/static/script.js" defer></script>
 </body>
 </html>
